<resources>
    <string name="app_name">Notify2Calendar Event(Lite)</string>
    <string name="action_settings">Settings</string>
    <string name="action_strValue">Checking String</string>
    <string name="title_activity_str_value_manager">Checked String Manager</string>
    <string name="lableSave">Save</string>
    <string name="dialogSave">Save it ?</string>
    <string name="lableCancel">Cancel</string>
    <string name="action_backup">Backup</string>
    <string name="msgNotBackup">Backup failed.</string>
    <string name="msgBackup">Backing up...</string>
    <string name="msgBackupCompiled">Backup Completed</string>
    <string name="lableReceivedSMS">Received SMS,MMS</string>
    <string name="msgGetPermission">Get Permission</string>
    <string name="msgGrantPermission">grant Permission</string>
    <string name="msgFailedPermission">failed Permission</string>
    <string name="dialogDelete">Delete It ?</string>
    <string name="lableDelete">Delete</string>
    <string name="msgNoDelete">No Action Delete ?</string>
    <string name="strId">ID</string>
    <string name="lablePhoneNumber">Phone No</string>
    <string name="lableEventId">EventId</string>
    <string name="labelChkValue">Check Value</string>
    <string name="lableStrBody">String Body</string>
    <string name="labelRegDate">Reg.Date</string>
    <string name="action_help">Help</string>
    <string name="labelOption">Option</string>
    <string name="labelAlarmTime">AlarmTime</string>
    <string name="labelGmailAccount">Gmail Account</string>
    <string name="before15min">15 min</string>
    <string name="before30min">30 min</string>
    <string name="before60min">60 min</string>
    <string name="labelEventTime">Event Time</string>
    <string name="labelEventTy">Use Event registration</string>
    <string name="mesgEventTy">When you select it, the schedule registration is set in the calendar.</string>
    <string name="labelTrue">Used</string>
    <string name="labelFalse">Not Used</string>
    <string name="msgLiteVersion">Lite Version. Overflow Count !!!</string>
    <string name="msgFinish">OK</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-5212800442190031~7421763015</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-5212800442190031/5917109653</string>
    <string name="banner_ad_unit_id_for_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="label_finish_apps">To exit, click the back button again.</string>
</resources>
