<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/strId"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textEventId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lableEventId"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textRegDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelRegDate"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lablePhoneNumber"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textChkValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/labelChkValue"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textStrBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lableStrBody"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>
